@@ -1041,8 +1041,11 @@ class Article extends Page {
 	 * If patrol is possible, output a patrol UI box. This is called from the
 	 * footer section of ordinary page views. If patrol is not possible or not
 	 * desired, does nothing.
+	 * Side effect: this method will call OutputPage::preventClickjacking()
+	 * and add the mediawiki.page.patrol.ajax module when a link is build.
 	 */
 	public function showPatrolFooter() {
+		global $wgAjaxPatrol;
 		$request = $this->getContext()->getRequest();
 		$outputPage = $this->getContext()->getOutput();
 		$user = $this->getContext()->getUser();
@@ -1054,6 +1057,9 @@ class Article extends Page {
 
 		$token = $user->getEditToken( $rcid );
 		$outputPage->preventClickjacking();
+		if ( $wgAjaxPatrol ) {
+			$outputPage->addModules( 'mediawiki.page.patrol.ajax' );
+		}
 
 		$link = Linker::linkKnown(
 			$this->getTitle(),
