@@ -2726,6 +2726,8 @@ $wgMessageStructure = array(
 		'markedaspatrollederror',
 		'markedaspatrollederrortext',
 		'markedaspatrollederror-noautopatrol',
+		'markedaspatrollednotify',
+		'markedaspatrollederrornotify',
 	),
 	'patrol-log' => array(
 		'patrol-log-page',
